fixed nav bar position and overlapping issue

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,3 +8,7 @@ body {
   background: #000;
   color: #fff;
 }
+
+.app-content {
+  padding-top: 64px; // navbar height
+}
